hphp/hack/test/typecheck/is_expression/tuple5.php.exp
File "tuple5.php", line 9, characters 5-15:
  (int, D<int>)
File "tuple5.php", line 8, characters 13-23:
Invalid "is" expression hint (Typing[4195])
  File "tuple5.php", line 8, characters 13-23:
  The "is" operator cannot be used with a tuple
